--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -1,37 +1,50 @@
-.login{
-    height: 100vh;
+.login {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
-.loginform{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
+.loginform {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
-input{
-    padding: 1rem 0.5rem;
-    width: 300px;
-    font-size: 1.2rem;
-    outline: none;
-    border-radius: 5px;
-    border: none;
-    border-bottom: 1px solid black;
-    padding-bottom: 0.1rem;
+input {
+  padding: 1rem 0.5rem;
+  width: clamp(250px, 300px, 50vw);
+  font-size: 1.2rem;
+  outline: none;
+  border-radius: 5px;
+  border: none;
+  border-bottom: 1px solid rgb(165, 165, 165);
+  padding-bottom: 0.1rem;
 }
 
-.loginbutton{
-    padding: 0.5rem 3rem;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    border-radius: 5px;
-    transition: backgorund-color 0.3s ease, transform 0.3s ease;
+.loginbutton {
+  padding: 0.5rem 3rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  transition: backgorund-color 0.3s ease, transform 0.3s ease;
 }
 
-.loginbutton:hover{
-    background-color: rgb(229, 229, 229);
-    transform: translateY(-3px);
+.loginbutton:hover {
+  background-color: rgb(229, 229, 229);
+  transform: translateY(-3px);
+}
+
+.signupSpan {
+  cursor: pointer;
+  color: blue;
+}
+
+.error {
+  color: red;
 }
