--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -13,6 +13,7 @@
 .navbarbuttons{
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 
 .navbarbutton{
@@ -21,5 +22,46 @@
     border: none;
     background-color: transparent;
     font-size: clamp(16px, 18px, 2rem);
-    padding: 0;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.navbarbutton:hover{
+    background-color: var(--hover);
+}
+
+.logout,.username{
+    cursor: pointer;
+}
+
+.logout{
+    transition: transform 0.3s ease;
+}
+
+.logout:hover{
+    transform: scale(1.05);
+}
+
+.username{
+    font-size: 1.1rem;
+    padding: 0.5rem;   
+    border-radius: 10px; 
+    transition: background-color 0.3s ease;
+}
+
+.username:hover{
+    background-color: var(--hover);
+}
+
+@media (max-width: 440px ) {
+    .navbarbutton{
+        padding: 0;
+    }
+    .navbarbutton:hover{
+        background-color: transparent;
+    }
+    .logout{
+        width: 30px;
+    }
 }
