--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -1,3 +1,6 @@
+:root{
+  --hover: rgb(229, 229, 229);
+}
 .login {
   height: 100vh;
   display: flex;
@@ -36,7 +39,7 @@ input {
 }
 
 .loginbutton:hover {
-  background-color: rgb(229, 229, 229);
+  background-color: var(--hover);
   transform: translateY(-3px);
 }
 
