--- a/src/pages/Signup.module.css
+++ b/src/pages/Signup.module.css
@@ -1,10 +1,8 @@
-.signup{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+.signup {
+  height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .signupform {
@@ -12,6 +10,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
+}
+
+.signupsvg {
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  max-height: 600px;
+}
+
+.signupcontainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 2rem;
 }
 
@@ -47,4 +59,16 @@ input {
 
 .error {
   color: red;
+}
+
+
+@media (max-width: 850px) {
+  .signup{
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+  }
+  .signupsvg{
+    max-width: 300px;
+    max-height: 300px;
+  }
 }
