--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -1,3 +1,18 @@
+.authhome{
+    display: flex;
+}
+
+.leftSide{
+    flex: 0.2;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.rightSide{
+    flex: 0.8;
+}
+
 .upload, .import{
     cursor: pointer;
 }
