Adding more details to the view of the page

--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -13,6 +13,16 @@
     flex: 0.8;
 }
 
+.miniNav{
+    display: flex;
+    justify-content: space-between;
+}
+
+.sortView{
+    display: flex;
+    gap: 0.5rem;
+}
+
 .upload, .import{
     cursor: pointer;
 }
