--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -62,6 +62,50 @@
   background-color: white;
 }
 
+.dialog:open{
+    width: 500px;
+    height: 250px;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.dialogHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.closeDialogButton{
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+}
+
+.dialog input{
+    width: 100%;
+    border: 1px solid black;
+    padding: 0.5rem;
+    padding-bottom: 2px;
+}
+
+.createFolderButtonContainer{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.createFolderButton{
+    padding: 0.4rem 1.8rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+
+.error{color: red;}
+
 @media (max-width: 900px) {
   .leftSide {
     width: fit-content;
