--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -62,49 +62,107 @@
   background-color: white;
 }
 
-.dialog:open{
-    width: 500px;
-    height: 250px;
-    border: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.dialog:open {
+  width: 500px;
+  min-height: 250px;
+  max-height: 300px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
 }
 
-.dialogHeader{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.2rem;
-    font-weight: bold;
+.dialogHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
-.closeDialogButton{
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
+.closeDialogButton {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
 }
 
-.dialog input{
-    width: 100%;
-    border: 1px solid black;
-    padding: 0.5rem;
-    padding-bottom: 2px;
+.dialog input {
+  width: 100%;
+  border: 1px solid black;
+  padding: 0.5rem;
+  padding-bottom: 2px;
 }
 
-.createFolderButtonContainer{
-    display: flex;
-    justify-content: flex-end;
+.createFolderButtonContainer {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.createFolderButton{
-    padding: 0.4rem 1.8rem;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
+.createFolderButton {
+  padding: 0.4rem 1.8rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
 }
 
-.error{color: red;}
+/* File upload dialog */
+
+.fileUploadDialog{
+    gap: 1rem;
+}
+
+.fileList {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.fileItem {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0;
+}
+
+.delete {
+  cursor: pointer;
+  border: none;
+  background-color: rgb(255, 67, 67);
+  padding: 0 1rem;
+  text-align: center;
+  color: white;
+  transition: background-color 0.3s ease-in, transform 0.3s ease-in;
+  border-radius: 5px;
+}
+
+.upload {
+  cursor: pointer;
+  width: fit-content;
+  align-self: center;
+  padding: 0.25rem 2.5rem;
+  font-size: 1.2rem;
+  border: none;
+  background-color: rgb(114, 170, 30);
+  color: white;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in, transform 0.3s ease-in;
+}
+
+.upload:hover {
+  background-color: rgb(93, 139, 25);
+  transform: translateY(-3px);
+}
+
+.delete:hover{
+    background-color:rgb(254, 106, 106);
+  transform: translateY(-3px);
+}
+
+.error {
+  color: red;
+}
 
 @media (max-width: 900px) {
   .leftSide {
