fixed issue with data fetch after sign up and added some stylings

--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -164,6 +164,11 @@
   color: red;
 }
 
+/* The items */
+.folder,.file{
+    cursor: pointer;
+}
+
 @media (max-width: 900px) {
   .leftSide {
     width: fit-content;
