Added more styling to the folder page

--- a/src/components/FileTableRow.module.css
+++ b/src/components/FileTableRow.module.css
@@ -6,7 +6,23 @@
 }
 
 th, td {
-  padding: 10px;
+  padding: 12px 10px;
+}
+
+th{
+    border-bottom: 1px solid;
+}
+
+td{
+    border-bottom: 1px #F5F5F5;
+}
+
+
+.row{
+transition: background-color 0.3s ease;
+}
+.row:hover{
+    background-color: var(--hover);
 }
 
 .rowItem{
