--- a/src/components/FileTableRow.module.css
+++ b/src/components/FileTableRow.module.css
@@ -1,8 +1,8 @@
 .icon {
-  width: 30px;
-  height: 30px;
-  min-width: 30px;
-  min-height: 30px;
+  width: 25px;
+  height: 25px;
+  min-width: 25px;
+  min-height: 25px;
 }
 
 th, td {
@@ -22,7 +22,7 @@ td{
 transition: background-color 0.3s ease;
 }
 .row:hover{
-    background-color: var(--hover);
+    background-color: rgb(246, 245, 245);
 }
 
 .rowItem{
