--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -16,6 +16,9 @@
 .rightSide {
   width: 100%;
   padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .miniNav {
@@ -57,9 +60,23 @@
   min-height: 30px;
 }
 
+.filesFolders{
+    background-color: white;
+    min-height: 100vh;
+}
+
+.emptyState{
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.25rem;
+    text-align: center;
+}
+
 .table {
   width: 100%;
-  background-color: white;
   text-align: left;
   border-collapse: collapse;
 }
