Added more styling to the auth home

--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -75,6 +75,15 @@
     text-align: center;
 }
 
+.emptyText{
+    font-size: clamp(1rem,28px,30px);
+    font-weight: bold;
+}
+
+.emptyLottie{
+    max-width: 500px;
+}
+
 .table {
   width: 100%;
   text-align: left;
