fixed error with key not being included in list and also added better styling

--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -80,12 +80,14 @@
     transition: background-color 0.3s ease;
     font-size: 1.2rem;
     border-radius: 5px;
+    color: #F99F1B;
 }
 
 .breadCrumbsButton:last-child{
     cursor: default;
     font-weight: bold;
     font-size: larger;
+    color: black;
 }
 
 .breadCrumbs span{
