added the beginning of the mobile view implementation

--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -246,6 +246,20 @@
   color: red;
 }
 
+/* Mobile View */
+.mobileView{
+  display: none;
+}
+
+@media (max-width:620px) {
+  .mobileView{
+    display: flex;
+  }
+  .authhome{
+    display: none;
+  }
+}
+
 @media (max-width: 900px) {
   .leftSide {
     width: fit-content;
