--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -1,48 +1,57 @@
-.mobileView{
+.mobileView {
+  display: none;
+  flex-direction: column;
+}
+
+.nav {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.name {
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  padding: 0
+}
+
+.name:hover {
+  background-color: #d1d1d1;
+}
+
+.filter {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.filterIcon {
+  width: 25px;
+  height: 25px;
+  transition: transform 0.3s ease;
+}
+
+.filterIcon:hover {
+  transform: scale(1.1);
+}
+
+.dropDown {
+  display: none;
+}
+
+.cards {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (max-width: 620px) {
+  .mobileView {
     display: flex;
-    flex-direction: column;
-}
-
-.nav{
-    padding: 2rem 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-.name{
-    background-color: transparent;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.name:hover{
-    background-color: #D1D1D1;
-}
-
-.filter{
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-}
-
-.filterIcon{
-    width: 25px;
-    height: 25px;
-    transition: transform 0.3s ease;
-}
-
-.filterIcon:hover{
-    transform: scale(1.1);
-}
-
-.dropDown{display: none;}
-
-.cards{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  }
 }
