--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -15,7 +15,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  padding: 0
+  padding: 0.1rem 0.12rem;
 }
 
 .name:hover {
@@ -48,6 +48,24 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+/* header */
+.backButton {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+}
+.backIcon {
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.backIcon:hover{
+    background-color: #d1d1d1;;
 }
 
 @media (max-width: 620px) {
