--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -51,8 +51,8 @@
 }
 
 /* header */
-.backButtonContainer{
-    padding-top: 2rem;
+.backButtonContainer {
+  padding-top: 2rem;
 }
 
 .backButton {
@@ -68,27 +68,42 @@
   transition: background-color 0.3s ease;
 }
 
-.backIcon:hover{
-    background-color: #d1d1d1;;
+.backIcon:hover {
+  background-color: #d1d1d1;
 }
 
-.folderName{
-    text-align: center;
-    font-size: 2rem;
+.folderName {
+  text-align: center;
+  font-size: 2rem;
 }
 
-.mobileEmptyState{
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 5rem;
-    text-align: center;
+.mobileEmptyState {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5rem;
+  text-align: center;
 }
 
-.emptyLottie{
-    max-width: 500px;
+.emptyLottie {
+  max-width: 500px;
+}
+
+.addContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.addButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 0;
+  border: none;
 }
 
 @media (max-width: 620px) {
