--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -1,6 +1,8 @@
 .mobileView {
   display: none;
   flex-direction: column;
+  min-height: 90vh;
+  position: relative;
 }
 
 .nav {
@@ -95,15 +97,41 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
 }
 
 .addButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   padding: 0;
   border: none;
+  background: linear-gradient(
+    to bottom,
+    #1e5799 0%,
+    #2989d8 50%,
+    #207cca 51%,
+    #7db9e8 100%
+  );
+}
+
+.addIcon {
+  width: 30px;
+  height: 30px;
+}
+
+.search{
+    flex: 1;
+    padding: 0 15px;
+    height: 50px;
+    max-width: 400px;
+    border-radius: 20px;
 }
 
 @media (max-width: 620px) {
