--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -109,6 +109,7 @@
   align-items: center;
   width: 50px;
   height: 50px;
+  min-width: 50px;
   border-radius: 50%;
   padding: 0;
   border: none;
