--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -136,6 +136,43 @@
     border-radius: 20px;
 }
 
+/* The add folder/file */
+.folderIcon,
+.fileUploadIcon {
+  width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+}
+
+.fileInput {
+  display: none;
+}
+
+.containerButton {
+  display: flex;
+  align-items: center;
+  border: none;
+  gap: 0.5rem;
+  min-width: max-content;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0.75rem 1rem;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.containerButton:hover {
+  background-color: white;
+}
+
+.fileUploadContainer{
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    border-radius: 10px 10px 0 0;
+}
+
 @media (max-width: 620px) {
   .mobileView {
     display: flex;
