--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   min-height: 90vh;
   position: relative;
+  background-color: white;
+  padding: 0 0.5rem;
 }
 
 .nav {
