--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -177,9 +177,42 @@
 }
 
 /* More dialog */
+.moreDialog{
+    border: none;
+    border-radius: 20px;
+}
+
+.moreDialogContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 300px;
+    min-width: 250px;
+}
+
 .moreDialogIcon{
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
+}
+
+.moreDialogHeader{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.moreDialogButtons{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.moreDialogButton{
+    cursor: pointer;
+    border: none;
+    padding: 1rem 0;
+    border-radius: 10px;
 }
 
 @media (max-width: 620px) {
