--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -177,42 +177,49 @@
 }
 
 /* More dialog */
-.moreDialog{
-    border: none;
-    border-radius: 20px;
+.moreDialog {
+  border: none;
+  border-radius: 20px;
 }
 
-.moreDialogContainer{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-width: 300px;
-    min-width: 250px;
+.moreDialogContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 300px;
+  min-width: 250px;
 }
 
-.moreDialogIcon{
-    width: 50px;
-    height: 50px;
+.moreDialogIcon {
+  width: 50px;
+  height: 50px;
 }
 
-.moreDialogHeader{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
+.moreDialogHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
 }
 
-.moreDialogButtons{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+.moreDialogButtons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 
-.moreDialogButton{
-    cursor: pointer;
-    border: none;
-    padding: 1rem 0;
-    border-radius: 10px;
+.moreDialogButton {
+  cursor: pointer;
+  border: none;
+  padding: 1rem 0;
+  border-radius: 10px;
+  color: white;
+  background-color: #0078D4;
+  transition: background-color 0.3s ease;
+}
+
+.moreDialogButton:hover{
+  background-color: #1881d2;
 }
 
 @media (max-width: 620px) {
