refactored so that only the files can be shared

--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -208,6 +208,10 @@
   gap: 1rem;
 }
 
+.moreDialogButton:last-child:nth-child(odd) {
+  grid-column: 1 / -1;
+}
+
 .moreDialogButton {
   cursor: pointer;
   border: none;
