--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -52,6 +52,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  flex: 1;
 }
 
 /* header */
@@ -88,7 +89,7 @@
   align-items: center;
 }
 
-.loadingLottie{width: 50px;
+.loadingLottie{width: 300px;
 height: 50px;}
 
 .mobileEmptyState {
