--- a/src/components/FileTableRow.module.css
+++ b/src/components/FileTableRow.module.css
@@ -79,3 +79,11 @@ transition: background-color 0.3s ease;
 .moreMenu button:hover {
   background: #f5f5f5;
 }
+
+.menuBottom {
+  top: 100%;
+}
+
+.menuTop {
+  bottom: 100%;
+}
