--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -25,11 +25,14 @@
   top: 150%;
 }
 
-.dropDown button{
+.sort{
+  display: flex;
   border: none;
   cursor: pointer;
   padding: 0.5rem 1rem;
-
+  text-align: left;
+  gap: 0.5rem;
+  align-items: center;
 }
 
 .sortButton {
@@ -266,6 +269,11 @@ height: 50px;}
 
 .moreDialogButton:hover{
   background-color: #1881d2;
+}
+
+.activeIcon{
+  width: 15px;
+  height: 20px;
 }
 
 @media (max-width: 620px) {
