--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -33,6 +33,7 @@
   text-align: left;
   gap: 0.5rem;
   align-items: center;
+  transition: background-color 0.3s ease;
 }
 
 .sortButton {
@@ -51,7 +52,7 @@
   height: 15px;
 }
 
-.sortButton:hover {
+.sortButton:hover,.sort:hover {
   background-color: #d1d1d1;
 }
 
