--- a/src/components/RenameDialog.module.css
+++ b/src/components/RenameDialog.module.css
@@ -18,7 +18,7 @@
 .buttons {
   padding-top: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .button {
