--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   cursor: default;
+  padding-top: 2rem;
 }
 
 .leftSide {
@@ -12,6 +13,7 @@
   flex-direction: column;
   width: max-content;
   padding: 1rem 1rem 0 0;
+  margin-top: 1.725rem;
 }
 
 .rightSide {
@@ -25,6 +27,7 @@
 .miniNav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .th {
@@ -257,6 +260,16 @@
 
 .error {
   color: red;
+}
+
+.desktopSearch{
+  padding: 0;
+  border: none;
+  min-width: 400px;
+  padding-left: 0.5rem;
+  padding-top: 0.125rem;
+  padding-right: 0.25rem;
+  font-size: 16px;
 }
 
 @media (max-width: 620px) {
