--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -202,6 +202,11 @@
   cursor: pointer;
   border: none;
   border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.createFolderButton:hover{
+background-color: rgb(224, 224, 224);;
 }
 
 /* File upload dialog */
