Added more styling to the mininav

--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -27,7 +27,8 @@
 .miniNav {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  gap: 0.25rem;
 }
 
 .th {
@@ -80,6 +81,7 @@
 .breadCrumbs {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .breadCrumbsButton {
