--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -2,32 +2,25 @@
   background-color: #f5f5f5;
 }
 .authhome {
-  display: flex;
-  justify-content: space-between;
-  cursor: default;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 15fr;
   padding-top: 2rem;
+  row-gap: 1rem;
 }
 
 .leftSide {
+  grid-row: 2/3;
   display: flex;
   flex-direction: column;
   width: max-content;
-  padding: 1rem 1rem 0 0;
-  margin-top: 1.725rem;
-}
-
-.rightSide {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  min-height: 80vh;
 }
 
 .miniNav {
+  grid-column: 2/3;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: flex-end;
   gap: 0.25rem;
 }
 
@@ -119,10 +112,12 @@
 }
 
 .contentContainer {
+  grid-column: 2/3;
   background-color: white;
   border-radius: 5px;
   flex: 1;
   padding: 1rem;
+  min-height: 80vh;
 }
 
 .loading {
@@ -291,8 +286,10 @@ background-color: rgb(224, 224, 224);;
   .leftSide {
     width: fit-content;
   }
-  .leftNavText {
+  /* .leftNavText {
     display: none;
-  }
-
+  } */
+   .leftNavButton{
+    flex-direction: column;
+   }
 }
