--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -3,6 +3,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
+    padding: 1rem;
+    padding-bottom: 0;
 }
 
 .logo{
