--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -50,7 +50,7 @@
 }
 
 .leftNavButton:hover {
-  background-color: white;
+  background-color: #f0efef;;
 }
 
 .fileInput {
@@ -70,6 +70,7 @@
   cursor: default;
   font-weight: bold;
   font-size: larger;
+  padding-left: calc(1rem + 6px);
 }
 
 .breadCrumbs {
@@ -163,16 +164,21 @@
   color: red;
 }
 
-.desktopSearch{
-  padding: 0;
-  border: none;
+.desktopSearch {
+  padding: 0.25rem 1rem;
+  border: 2px solid #e5e5e5;
+  border-radius: 8px;
   width: 100%;
   max-width: 400px;
   min-width: 250px;
-  padding-left: 0.5rem;
-  padding-top: 0.125rem;
-  padding-right: 0.25rem;
   font-size: 16px;
+  transition: all 0.3s ease;
+}
+
+.desktopSearch:focus {
+  outline: none;
+  border-color: #0078D4;
+  box-shadow: 0 0 0 3px rgba(0, 120, 212, 0.1);
 }
 
 @media (max-width: 620px) {
