--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -2,6 +2,46 @@
   min-height: 100vh;
 }
 
+/* details section */
+.details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.appName {
+  font-size: clamp(50px, 20vw, 150px);
+  font-weight: 600;
+  letter-spacing: -2.8px;
+  line-height: 1.2;
+}
+
+.signInButton {
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 20px;
+  border-radius: 20px;
+  padding-inline: 2rem;
+  padding-block: 0.5rem;
+  border: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  height: 40px;
+  transition: background-color 0.3s ease;
+}
+
+.signInButton:hover{
+  background-color: rgb(80, 80, 80);
+}
+
+.signInButton:active{
+  background-color: gray;
+  color: white;
+}
+
+/* footer */
+
 .footer {
   background: #1a1a1a;
   color: white;
@@ -38,5 +78,4 @@
 }
 
 @media (max-width: 768px) {
-  
 }
