--- a/src/reset.css
+++ b/src/reset.css
@@ -23,6 +23,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   background-color: #ffffff;
+  font-family: system-ui, Helvetica Neue, sans-serif;
 }
 
 img,
