--- a/src/components/FileTableRow.module.css
+++ b/src/components/FileTableRow.module.css
@@ -20,10 +20,20 @@ td {
 }
 
 .row {
+  font-size: small;
   transition: background-color 0.3s ease;
 }
+
 .row:hover {
   background-color: rgb(246, 245, 245);
+}
+
+.itemName{
+  font-weight: 500;
+}
+
+.dateCell,.sizeCell{
+  font-weight: 200;
 }
 
 /* cells */
