--- a/src/components/MobileView.module.css
+++ b/src/components/MobileView.module.css
@@ -80,6 +80,7 @@
   flex-direction: column;
   gap: 1rem;
   flex: 1;
+  padding-bottom: 2rem;
 }
 
 /* header */
@@ -173,7 +174,6 @@ height: 50px;}
   flex: 1;
   padding: 0 15px;
   height: 50px;
-  max-width: 400px;
   border-radius: 20px;
   border: 1px solid #C7C7C7;
 }
