--- a/src/pages/AuthHome.module.css
+++ b/src/pages/AuthHome.module.css
@@ -21,7 +21,7 @@
   grid-column: 2/3;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
   gap: 0.25rem;
 }
 
