--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -20,7 +20,7 @@
 
 input {
   padding: 1rem 0.5rem;
-  width: clamp(250px, 300px, 50vw);
+  width: clamp(250px, 400px, 50vw);
   font-size: 1.2rem;
   outline: none;
   border-radius: 5px;
@@ -34,13 +34,19 @@ input {
   border: none;
   cursor: pointer;
   font-size: 1.2rem;
-  border-radius: 5px;
-  transition: backgorund-color 0.3s ease, transform 0.3s ease;
+  border-radius: 20px;
+  width: clamp(250px, 400px, 50vw);
+  background-color: black;
+  color: white;
+  transition: backgorund-color 0.3s ease;
 }
 
-.loginbutton:hover {
-  background-color: var(--hover);
-  transform: translateY(-3px);
+.loginbutton:hover{
+  background-color: rgb(80, 80, 80);
+}
+
+.loginbutton:active {
+  background-color: gray;
 }
 
 .signupSpan {
