--- a/src/pages/Signup.module.css
+++ b/src/pages/Signup.module.css
@@ -15,23 +15,18 @@
   gap: 2rem;
 }
 
-.signupsvg {
-  width: 100%;
-  height: 100%;
-  max-width: 600px;
-  max-height: 600px;
-}
-
 .signupcontainer{
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 
 input {
   padding: 1rem 0.5rem;
-  width: clamp(250px, 300px, 50vw);
+  width: clamp(250px, 400px, 50vw);
   font-size: 1.2rem;
   outline: none;
   border-radius: 5px;
@@ -45,13 +40,19 @@ input {
   border: none;
   cursor: pointer;
   font-size: 1.2rem;
-  border-radius: 5px;
-  transition: backgorund-color 0.3s ease, transform 0.3s ease;
+  border-radius: 20px;
+  width: clamp(250px, 400px, 50vw);
+  background-color: black;
+  color: white;
+  transition: backgorund-color 0.3s ease;
 }
 
-.signupbutton:hover {
-  background-color: rgb(229, 229, 229);
-  transform: translateY(-3px);
+.signupbutton:hover{
+  background-color: rgb(80, 80, 80);
+}
+
+.signupbutton:active {
+  background-color: gray;
 }
 
 .loginSpan {
@@ -61,17 +62,4 @@ input {
 
 .error {
   color: red;
-}
-
-
-@media (max-width: 850px) {
-  .signup{
-    flex-direction: column-reverse;
-    justify-content: flex-end;
-     gap: 2rem;
-  }
-  .signupsvg{
-    max-width: 300px;
-    max-height: 300px;
-  }
 }
