hide the auth buttons

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -10,8 +10,12 @@
 .logo{
     font-size: 20px;
     cursor: pointer;
-    color: #0F6CBD;
+    color: black;
     font-weight: 600;
+}
+
+.authButtons{
+    display: none;
 }
 
 .navbarbuttons{
