added an avatar

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -60,6 +60,11 @@
     position: relative;
 }
 
+.avatar{
+    width: 60px;
+    cursor: pointer;
+}
+
 .dropdown {
     position: absolute;
     top: 100%;
