--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,6 +3,14 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  animation: slideIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+
+@keyframes slideIn {
+  from{
+    opacity: 0;
+    transform: translateY(100px);
+  }
 }
 /* hero */
 .hero {
