--- a/src/reset.css
+++ b/src/reset.css
@@ -24,6 +24,7 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: #ffffff;
   font-family: system-ui, Helvetica Neue, sans-serif;
+  min-height: 100vh;
 }
 
 img,
